[gd_scene load_steps=8 format=3 uid="uid://bfbdac4xacsaj"]

[ext_resource type="PackedScene" uid="uid://dg3ikms7niw6" path="res://Scenes/SettingsPage/collapsible_setting_base.tscn" id="1_gy556"]
[ext_resource type="Script" path="res://Scenes/SettingsPage/Scripts/top_level_dice_settings.gd" id="2_vnckq"]
[ext_resource type="PackedScene" uid="uid://eur1e24a885p" path="res://Scenes/SettingsPage/dice_size_setting.tscn" id="3_yuky0"]
[ext_resource type="Theme" uid="uid://cfefgu8jbb3xm" path="res://Resources/Styles/default_theme.tres" id="6_ayfdi"]
[ext_resource type="PackedScene" uid="uid://dy7ly2u0s0axc" path="res://Scenes/Common/DiceViews/settings_managed_dice_image.tscn" id="7_74d46"]
[ext_resource type="Shader" uid="uid://crebs61161mid" path="res://Resources/Shader/dice_tint_shader_script.tres" id="8_nmty5"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_00dgr"]
resource_local_to_scene = true
shader = ExtResource("8_nmty5")
shader_parameter/TintColor = Color(1, 1, 1, 0)

[node name="TopLevelDiceSettings" instance=ExtResource("1_gy556")]
custom_minimum_size = Vector2(0, 400)
script = ExtResource("2_vnckq")

[node name="SettingName" parent="TopLevelContainer/TitleBarContainer" index="1"]
custom_minimum_size = Vector2(0, 75)
theme_type_variation = &"HugeRichTextLabel"
text = "Dice"

[node name="CollapsibleSection" parent="TopLevelContainer/CollapsibleContainer" index="1"]
visible = false
custom_minimum_size = Vector2(0, 750)

[node name="SettingsContainer" type="HBoxContainer" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection" index="0"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 58.0
grow_horizontal = 2

[node name="SettingsVContainer" type="VBoxContainer" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/SettingsContainer" index="0"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0

[node name="DiceSizeSetting" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/SettingsContainer/SettingsVContainer" index="0" instance=ExtResource("3_yuky0")]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/SettingsContainer/SettingsVContainer" index="1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
mouse_filter = 2

[node name="HSeparator" type="HSeparator" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/SettingsContainer" index="1"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 1

[node name="ImageContainer" type="HBoxContainer" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection" index="1"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 150.0
grow_horizontal = 2
mouse_filter = 2
theme = ExtResource("6_ayfdi")

[node name="HSeparator" type="HSeparator" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ImageContainer" index="0"]
modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="SettingsManagedDiceImage" parent="TopLevelContainer/CollapsibleContainer/CollapsibleSection/ImageContainer" index="1" instance=ExtResource("7_74d46")]
material = SubResource("ShaderMaterial_00dgr")
layout_mode = 2
